<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_skills_list"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/nav_timeslot_list_my_offers"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_my_offers" />

        <item
            android:id="@+id/nav_interesting_offers"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:title="Interesting offers" />
        <item
            android:id="@+id/nav_accepted_offers"
            android:icon="@drawable/ic_baseline_save_changes_24"
            android:title="Accepted offers" />

        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />

    </group>

</menu>