<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorSecondary"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_header_imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_user_icon"
        android:visibility="gone"
        app:civ_border_color="?attr/colorOnSecondary"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/nav_header_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Unknown name - fill your profile"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Unknown email - fill your profile"
        android:text="@string/nav_header_subtitle"
        android:textColor="?attr/colorOnSecondary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nav_header_login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nav_header_login_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/nav_header_google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/nav_header_login_button"-->
<!--        style="@style/Widget.AppCompat.Button.Small"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:background="@color/primaryColor"-->
<!--        android:text="@string/nav_header_login_button"-->
<!--        android:textColor="?attr/colorOnPrimary"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold" />-->
</LinearLayout>