<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/nav_skills_list">

    <fragment
        android:id="@+id/nav_timeslot_show"
        android:name="com.example.g22.TimeSlotView.TimeSlotShowFragment"
        android:label="@string/frag_title_timeslot_show"
        tools:layout="@layout/time_slot_show_frag">
        <argument
            android:name="timeSlotId"
            app:argType="string" />
        <argument
            android:name="readOnly"
            app:argType="boolean" />
        <action
            android:id="@+id/action_nav_timeslot_show_to_nav_show_other_profile"
            app:destination="@id/nav_show_other_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_timeslot_show_to_chatFragment"
            app:destination="@id/nav_chat_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_timeslot_show_my_offers"
        android:name="com.example.g22.TimeSlotView.TimeSlotShowFragment"
        android:label="@string/frag_title_timeslot_show"
        tools:layout="@layout/time_slot_show_frag">
        <argument
            android:name="timeSlotId"
            app:argType="string" />
        <action
            android:id="@+id/action_timeSlotShowMyOffersFragment_to_timeSlotEditFragment"
            app:destination="@id/nav_timeslot_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="readOnly"
            app:argType="boolean" />
        <action
            android:id="@+id/action_nav_timeslot_show_my_offers_to_nav_show_other_profile"
            app:destination="@id/nav_show_other_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>


    <fragment
        android:id="@+id/nav_timeslot_list_my_offers"
        android:name="com.example.g22.TimeSlotList.TimeSlotListFragment"
        android:label="@string/frag_title_my_offers"
        tools:layout="@layout/time_slot_list_frag">
        <action
            android:id="@+id/action_timeSlotListFragment_to_timeSlotEditFragment2"
            app:destination="@id/nav_timeslot_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="skill"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_timeslot_list_my_offers_to_nav_timeslot_show_my_offers"
            app:destination="@id/nav_timeslot_show_my_offers"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_timeslot_list_by_skills"
        android:name="com.example.g22.TimeSlotList.TimeSlotListFragment"
        android:label="@string/frag_title_list_by_skills"
        tools:layout="@layout/time_slot_list_frag">
        <argument
            android:name="skill"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_timeslot_list_by_skills_to_nav_timeslot_show"
            app:destination="@id/nav_timeslot_show"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_timeslot_edit"
        android:name="com.example.g22.TimeSlotView.TimeSlotEditFragment"
        android:label="@string/frag_title_timeslot_edit"
        tools:layout="@layout/time_slot_edit_frag">
        <argument
            android:name="isAdd"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_timeSlotEditFragment_to_timeSlotListFragment"
            app:destination="@id/nav_timeslot_list_my_offers"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="timeSlotId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_show_profile"
        android:name="com.example.g22.ShowProfile.ShowProfileFragment"
        android:label="@string/frag_title_profile_show"
        tools:layout="@layout/show_profile_frag" >
        <action
            android:id="@+id/action_showProfileFragment_to_editProfileFragment"
            app:destination="@id/nav_edit_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="profileId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_show_profile_to_nav_reviews_list"
            app:destination="@id/nav_reviews_list" />
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.g22.ShowProfile.EditProfileFragment"
        android:label="@string/frag_title_profile_edit"
        tools:layout="@layout/edit_profile_frag"/>
    <action
        android:id="@+id/nav_to_home"
        app:destination="@id/nav_skills_list"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/nav_skills_list"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/nav_skills_list"
        android:name="com.example.g22.SkillsList.SkillsListFragment"
        android:label="@string/frag_title_skills_list"
        tools:layout="@layout/skills_list_frag"
        >
        <action
            android:id="@+id/action_nav_skills_list_to_nav_timeslot_list_by_skills"
            app:destination="@id/nav_timeslot_list_by_skills"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_other_profile"
        android:name="com.example.g22.ShowProfile.ShowProfileFragment"
        android:label="@string/frag_title_profile_show"
        tools:layout="@layout/show_profile_frag" >
        <argument
            android:name="profileId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_show_other_profile_to_nav_reviews_list"
            app:destination="@id/nav_reviews_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_chat_fragment"
        android:name="com.example.g22.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
        <argument
            android:name="receiver"
            app:argType="string" />
        <argument
            android:name="offerId"
            app:argType="string" />
        <argument
            android:name="offerTitle"
            app:argType="string" />
        <argument
            android:name="receiverName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_reviews_list"
        android:name="com.example.g22.reviews.UserReviewsListFragment"
        android:label="fragment_user_reviews_list"
        tools:layout="@layout/user_reviews_list_frag">
        <argument
            android:name="revieweeId"
            app:argType="string" />
        <argument
            android:name="reviewType"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_interesting_offers"
        android:name="com.example.g22.interestingOffers.InterestingOfferListFragment"
        android:label="fragment_interesting_offer_list"
        tools:layout="@layout/fragment_interesting_offer_list" >
        <action
            android:id="@+id/action_nav_interesting_offers_to_chatFragment"
            app:destination="@id/nav_chat_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_accepted_offers"
        android:name="com.example.g22.interestingOffers.InterestingOfferListFragment"
        android:label="fragment_accepted_offer_list"
        tools:layout="@layout/fragment_interesting_offer_list" >
        <action
            android:id="@+id/action_nav_accepted_offers_to_chatFragment"
            app:destination="@id/nav_chat_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_accepted_offers_to_createReviewFragment"
            app:destination="@id/createReviewFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/createReviewFragment"
        android:name="com.example.g22.createReview.CreateReviewFragment"
        android:label="create_review_frag"
        tools:layout="@layout/create_review_frag" >
        <argument
            android:name="revieweeId"
            app:argType="string" />
        <argument
            android:name="conversationId"
            app:argType="string" />
        <argument
            android:name="reviewType"
            app:argType="string" />
    </fragment>

</navigation>